<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.teamwan.wander.Options">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@android:color/background_light"
        android:padding="8dp">

        <TextView
            android:text="@string/OptionsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/OptionsTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textSize="40sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp" />

        <TextView
            android:text="@string/OptionNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/NotifFreqHead"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textAlignment="center" />

        <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="2"
            android:progress="1"
            android:id="@+id/NotifSlider"
            android:layout_margin="10dp"
            android:thumbTint="@color/colorPrimaryDark"
            android:progressTint="@color/UncheckedBox"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:text="@string/OptionsNever"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/Never"
                android:layout_weight="0.25"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:text="@string/OptionsDaily"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/Daily"
                android:layout_weight="0.25"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center" />

            <TextView
                android:text="@string/OptionsWeekly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/Weekly"
                android:layout_weight="0.25"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <TextView
            android:id="@+id/NotifSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickNotifSave"
            android:paddingTop="15dp"
            android:text="@string/SAVE"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp" />

        <TextView
            android:text="@string/RevokeConsent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ConsentHead"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ConsentButton"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:onClick="onClickRevoke"
            android:text="RevokeButton"
            android:clickable="true" />

    </LinearLayout>

</FrameLayout>
