<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_questions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.teamwan.wander.Options">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/QuestionsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/Questions"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/QuestionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/QuestionsText"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/UserIDButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickUserIDButton"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="0dp"
            android:text="@string/TapToCopy"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/QuestionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="55dp"
            android:layout_marginTop="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/CopyFirst"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/QuestionsBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickBack"
            android:text="@string/Back"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />


    </LinearLayout>

</FrameLayout>
